resolved spacing issue on header at small screen widths

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,11 +7,10 @@ body{
     box-sizing: border-box;
     font-family: 'Noto Sans',sans-serif;
     color: black;
-    margin: 0 auto;
     width: 100%;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-items: center;
+    justify-items: center; */
 }
 
 h2{
@@ -34,19 +33,6 @@ a{
     text-decoration: none;
 }
 
-header {
-
-    top:0;
-    position:fixed;
-    width: 100%;
-    max-width: inherit;
-    z-index: 3;
-    margin: 0 auto;
-    display: flex;
-    align-items: baseline;
-    height: 100px;
-
-}
 
 iframe {
     border: 2px solid #fff;
@@ -55,12 +41,18 @@ iframe {
     height: 350px;
 }
 
- .nav{
+ .nav {
+    box-sizing: border-box;
+    position: fixed;
+    padding: 20px 0px 0px 0px;
     width: 100%;
-    height: 100%;
-    margin:0 auto;
-    border-bottom: 2px solid #fff;
-    z-index: 3;
+    max-width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    z-index: 100;
+    border-bottom:4px solid #fff ;
+
 }
 
 
@@ -69,15 +61,55 @@ iframe {
     font-size: 1.5rem;
 }
 
+.nav-list-item-other {
+    
+    display: none;
+    color: #fff;
+    font-size: 1.5rem;
+    list-style: none;
+    width: 100px;
+    position: relative;
+    padding: 1.5rem 1rem;
+    cursor: pointer;
+}
+
+.toggle-menu{
+
+    position: absolute;
+    top:.75rem;
+    right:1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height:21px
+}
+
+.toggle-bar{
+    height:3px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+
+
 
 .nav-bar{
     
+    box-sizing: border-box;
+    padding: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    gap: 2rem;
-    margin: 2rem;
+    margin-top: ;
+    margin:0px 0px 0px 40px;
+    padding: 0;
+    list-style: none;
     flex-wrap: wrap;
+    flex: 1 1 10rem;
+    
+
 }
 
 
@@ -170,6 +202,7 @@ iframe {
 
     color: #D9ED92;
 } 
+
 
 
 .welcome-box {
